  - Fixed the Arab Spring events about army mutinies happening when the Arab Spring has been completed
  - Fixed the cosmetic tag for the Maghreb Federation not properly being set which was causing it to not properly show the flag
  - Fixed the Singaporean ideas using the wrong building slots factor modifier causing it to not properly work

 Balance:
  - Reduced the stability penalty for the "Nuclear Power (Offensive)" idea from -0.15 to -0.10
  - Reduced the cost from Somali Pirate event from 25 billion to 15 billion and instead of 5 convoys, you only lose 2 convoys
  - removed the regional power requirement from the Space Programs for civilian projects
  - Reduced the cost of the special project facilities from 50,000 to 45,000
  - Changed the modifier for the "Global Diplomacy" ideas for Singapore from send_volunteer_factor to send_volunteer_size so you can send more volunteers
  - Made the Bolivian focus "Purchase Russian Aircraft" purchase MiG-29 Fulcrum instead of Tu-160 since these are more realistic for Bolivia

 Content:
  - NEW FOCUS TREE: Sweden
  - Added new decisions for Bolivia to allow them to develop their oil reserves
  - Added "Robert Hanssen" as an operative for the Russians to use with American citizenship
  - Added an event for Venezuela where Hugo Chavez dies and Nicolás Maduro becomes the president (Requires Hugo Chavez to be in power at the time)
  - Added a date trigger for the United States event "Lehman Brothers Collapse" to be any time after 2005.1.1
  - Added new content for North and South Korea as well as a new Sub Tree for North Korea

 Database:
  - Added 16 Su-24MRs to the Ukrainian stockpile in 2000
  - Added 2 missing Marine Regiments to the USA in 2000
  - Changed the starting economic cycle for the USA to "Stable Growth"

 Game Rules:

 Graphics:
  - Converted all PNG assets to DDS to better optimize for lower end machines

 Localization: