@@ -645,7 +645,6 @@ rule_influence_cooldown_limits = {
 		desc = "RULE_30_DAY_INFLUENCE_DESC"
 	}
 }
-
 rule_monthly_domestic_independence_tick = {
 	name = "RULE_MONTHLY_DOMESTIC_INFLUENCE_TICK"
 	group = "MD_INFLUENCE_RULES"
@@ -662,7 +661,6 @@ rule_monthly_domestic_independence_tick = {
 		allow_achievements = yes
 	}
 }
-
 rule_monthly_domestic_independence_gain_amount = {
 	name = "RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT"
 	group = "MD_INFLUENCE_RULES"
@@ -682,6 +680,20 @@ rule_monthly_domestic_independence_gain_amount = {
 		name = amount_15_gain
 		text = "RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_15"
 		desc = "RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_15_DESC"
+	}
+}
+rule_disable_ai_influence_puppeting = {
+	name = "RULE_DISABLE_AI_INFLUENCE_PUPPETING"
+	group = "MD_INFLUENCE_RULES"
+	icon = "GFX_production_licenses"
+	default = {
+		name = no
+		text = "RULE_OPTION_NO"
+	}
+	option = {
+		name = yes
+		text = "RULE_OPTION_YES"
+		desc = "RULE_YES_DISABLE_AI_INFLUENCE_PUPPETING_DESC"
 	}
 }
 
@@ -2300,7 +2312,7 @@ SWE_ai_behavior = {
 		name = DEFAULT
 		text = "RULE_OPTION_DEFAULT"
 		desc = "RULE_OPTION_DEFAULT_AI_DESC"
-	} 
+	}
 	option = {
 		name = NORTHERN_AMBITION
 		text = "RULE_OPTION_NORTHERN_AMBITION"
