@@ -27315,7 +27315,7 @@ focus_tree = {
 				has_idea = intervention_global_interventionism
 				western_socialism_are_not_in_power_or_coalition = yes
 			}
-			has_completed_focus = ISR_focus_on_the_clusters
+			has_completed_focus = ISR_the_enclave_settlements
 		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus ISR_tear_down_oslo executed"
@@ -27370,7 +27370,7 @@ focus_tree = {
 				has_idea = intervention_global_interventionism
 				western_socialism_are_not_in_power_or_coalition = yes
 			}
-			has_completed_focus = ISR_focus_on_the_clusters
+			has_completed_focus = ISR_the_enclave_settlements
 		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus ISR_disarm_the_palestinian_forces executed"
@@ -27593,6 +27593,7 @@ focus_tree = {
 				}
 				has_country_flag = pal_rejected_conter
 			}
+			has_completed_focus = ISR_focus_on_the_clusters
 		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus ISR_restore_palestinian_authority executed"
@@ -27623,6 +27624,7 @@ focus_tree = {
 			NOT = {
 				has_war_with = PAL
 			}
+			has_completed_focus = ISR_focus_on_the_clusters
 		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus ISR_arm_their_security_services executed"
@@ -27668,6 +27670,7 @@ focus_tree = {
 			NOT = {
 				has_war_with = PAL
 			}
+			has_completed_focus = ISR_focus_on_the_clusters
 		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus ISR_restart_negotiations executed"
