@@ -842,6 +842,10 @@ make_puppet_action_available = {
 	is_same_government = yes
 	NOT = { is_subject_of = PREV }
 	NOT = { has_war = yes }
+	has_game_rule = {
+		rule = rule_disable_ai_influence_puppeting
+		option = no
+	}
 }
 
 economic_exploitation_available = {
