@@ -1940,6 +1940,9 @@ capital = 56
 	set_variable = { var = population_tax_rate value = 39 }
 	set_variable = { var = int_investments value = 637 }
 
+	set_variable = { enrichment_facilities = 2 }
+	add_to_array = { global.enrichment_countries = THIS.id }
+
 	# France Starting Productivity
 	56 = { set_variable = { productivity_state_var = 1775 } } # Paris/Ile-de-France
 	54 = { set_variable = { productivity_state_var = 1020 } } # Haut-de-France
