@@ -2696,11 +2696,6 @@ spriteTypes = {
 	}
 
 	spriteType = {
-		name = "GFX_BLR_util_vehicle_3_medium"
-		texturefile = "gfx/interface/technologies/BLR/LAND/U4.dds"
-	}
-
-	spriteType = {
 		name = "GFX_MEX_util_vehicle_0_medium"
 		texturefile = "gfx/interface/technologies/SAM/LAND/U1.dds"
 	}
@@ -11313,7 +11308,7 @@ spriteTypes = {
 		name = "GFX_KOR_nsb_artillery_4_medium"
 		texturefile = "gfx/interface/technologies/USA/LAND/M667.dds"
 	}
-	
+
 	spriteType = {
 		name = "GFX_TAI_artillery_0_medium"
 		texturefile = "gfx/interface/technologies/USA/LAND/M101.dds"
