@@ -1,4 +1,5 @@
 ﻿l_english:
+
  MD_AI_RULES: "AI Options"
  MD_PEACE_DEALS: "Peace Conferences"
  MD_FOCUS_TREE_RULES: "Focus Tree Options"
@@ -523,8 +524,8 @@
  PMR_sub_behavior: "@PMR Transnistria Sub-Behavior"
  PMR_PASSIVE_DEFAULT: "Economic Priority"
  PMR_PASSIVE_DEFAULT_DESC: "Transnistria will focus its attention on the economic branch."
- PMR_SHERIFF: "Fighting The "Sheriff""
- PMR_SHERIFF_DESC: "Transnistria will focus on fighting the influence of the "Sheriff" Corporation."
+ PMR_SHERIFF: "Fighting The \"Sheriff\""
+ PMR_SHERIFF_DESC: "Transnistria will focus on fighting the influence of the \"Sheriff\" Corporation."
 
  #Cuba
  CUB_ai_behavior: "@CUB Cuba"
@@ -718,6 +719,10 @@
  RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_10_DESC: "Each month §YDomestic Independence§! increases by 0.10% as long as the Monthly §YDomestic Independence§! Growth Tick is enabled."
  RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_15: "0.15%"
  RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_15_DESC: "Each month §YDomestic Independence§! increases by 0.15% as long as the Monthly §YDomestic Independence§! Growth Tick is enabled."
+
+ RULE_DISABLE_AI_INFLUENCE_PUPPETING: "Disable AI Influence Puppeting"
+ RULE_YES_DISABLE_AI_INFLUENCE_PUPPETING_DESC: "AI will not be able to puppet other nations via the influence system."
+ RULE_NO_DISABLE_AI_INFLUENCE_PUPPETING_DESC: "AI will be able to puppet other nations via the influence system."
 
  # OPTIMISATION AND PERFORMANCE
  RULE_ENABLE_DIVISION_LIMITER: "Enable AI Division Limiter"
