@@ -24,6 +24,7 @@ v1.12.2
   - Fixed the Arab Spring events about army mutinies happening when the Arab Spring has been completed
   - Fixed the cosmetic tag for the Maghreb Federation not properly being set which was causing it to not properly show the flag
   - Fixed the Singaporean ideas using the wrong building slots factor modifier causing it to not properly work
+  - Fixed the Israeli focus "The Oslo Accord" not properly requiring you to complete the focus "The Regulation Act" soft-locking you on the sub tree
 
  Balance:
   - Reduced the stability penalty for the "Nuclear Power (Offensive)" idea from -0.15 to -0.10
@@ -34,7 +35,7 @@ v1.12.2
   - Made the Bolivian focus "Purchase Russian Aircraft" purchase MiG-29 Fulcrum instead of Tu-160 since these are more realistic for Bolivia
 
  Content:
-  - NEW FOCUS TREE: Sweden
+  - NEW/IMPROVED FOCUS TREE: Sweden, South/North Korea
   - Added new decisions for Bolivia to allow them to develop their oil reserves
   - Added "Robert Hanssen" as an operative for the Russians to use with American citizenship
   - Added an event for Venezuela where Hugo Chavez dies and Nicolás Maduro becomes the president (Requires Hugo Chavez to be in power at the time)
@@ -45,11 +46,14 @@ v1.12.2
   - Added 16 Su-24MRs to the Ukrainian stockpile in 2000
   - Added 2 missing Marine Regiments to the USA in 2000
   - Changed the starting economic cycle for the USA to "Stable Growth"
+  - Added 2 enrichment facilities to France
 
  Game Rules:
+  - Added a new game rule to disable the AI from puppeting other nations via the influence system
 
  Graphics:
   - Converted all PNG assets to DDS to better optimize for lower end machines
+  - Fixed a broken graphic for Belarus in their utility vehicle graphics
 
  Localization:
   - Removed a confusing statement in the Arab Spring events where it mentioned caretaker governments but was using the name of the former leader instead
